deployments/app-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-demo
  labels:
    name: app-demo
