deployments/app-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-demo-svc
  namespace: app-demo
spec:
  type: ClusterIP
  selector:
    app: app-demo
  ports:
  - port: 8080
    targetPort: 80
